--- a/Minecraft-server/server.properties
+++ b/Minecraft-server/server.properties
@@ -27,7 +27,7 @@ max-build-height=256
 max-players=20
 max-tick-time=600000
 max-world-size=29999984
-motd=\u00A7l\u00A7a>\u00A7r>\u00A7e\u00A7m   \u00A76> \u00A79\u00A7l\:\u00A7r \u00A7c\u00A7lFear \u00A79NightFall \u00A7e\u00A7l1.19.2 \u00A7r\u00A7l\u00A76<\u00A7e\u00A7m   \u00A7a<\u00A7r<\n\u00A76\u00A7k|||\u00A7r\u00A7l\u00A7fEvent\u00A76\u00A7k|||\u00A7r\u00A7l\: \u00A7b\u00A7nInPure.\! \!\!\!
+motd=\u00A7l\u00A7a>\u00A7r>\u00A7e\u00A7m   \u00A76> \u00A79\u00A7l\:\u00A7r \u00A7c\u00A7lDePire \u00A79Pack \u00A7e\u00A7l1.16.5 \u00A7r\u00A7l\u00A76<\u00A7e\u00A7m   \u00A7a<\u00A7r<\n\u00A76\u00A7k|||\u00A7r\u00A7l\u00A7fEvent\u00A76\u00A7k|||\u00A7r\u00A7l\: \u00A7b\u00A7nTiktokshop.\! \!\!\!
 network-compression-threshold=256
 online-mode=false
 op-permission-level=2
